--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,3 +1,287 @@
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        overflow: hidden;
+
+    }
+
+    .contact {
+        padding: 50px;
+        background: #c0b5b5;
+        width: 100%;
+
+    }
+
+    .container-1 {
+        margin-top: 30px;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    #row-1 {
+
+        max-width: 583px;
+        height: 888px;
+        border-radius: 30px 0px 0px 30px;
+
+    }
+
+    .row-1 {
+
+        max-width: 410px;
+        height: 888px;
+        background: #F7FFF1;
+        border-radius: 0px 30px 30px 0px;
+
+    }
+
+    .head {
+        width: 268px;
+        height: 72px;
+        margin-top: 40px;
+        margin-left: 70px;
+
+        font-style: normal;
+        font-weight: 500;
+        font-size: 48px;
+        line-height: 72px;
+        /* identical to box height */
+
+
+        color: #000000;
+
+    }
+
+    .box {
+        width: 550px;
+        height: 700px;
+        margin-top: 50px;
+        margin-left: 100px;
+    }
+
+    .mail {
+        margin-top: 25px;
+        height: 24px;
+        width: 130px;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 500;
+        color: #000000;
+    }
+
+    #mail {
+        width: 446px;
+        height: 42px;
+        margin: 3px;
+        border: 1px solid #C4C4C4;
+        box-sizing: border-box;
+        border-radius: 5px;
+
+        font-size: 15px;
+
+        border-radius: 5px;
+    }
+
+    #textarea {
+        width: 446px;
+        height: 254px;
+        margin: 3px;
+        border: 1px solid #C4C4C4;
+        box-sizing: border-box;
+        border-radius: 5px;
+
+        font-size: 15px;
+
+        border-radius: 5px;
+    }
+
+    #button {
+        margin-top: 10px;
+        margin-left: 150px;
+        width: 126px;
+        height: 40px;
+        border-style: none;
+        background: #04C45C;
+        border-radius: 10px;
+    }
+
+    .row-3 {
+        width: 600px;
+        height: 700px;
+
+        margin-top: -40px;
+        margin-left: -20px;
+    }
+
+    #cvlogo {
+        width: 500px;
+        height: 700px;
+    }
+
+    .row-4 {
+        width: 400px;
+        height: 800px;
+        margin-left: 37px;
+        margin-top: -600px;
+
+    }
+
+    .row-5 {
+        width: 450px;
+        height: 150px;
+        margin-left: 15px;
+
+    }
+
+    .row-6 {
+        width: 300px;
+        height: 479px;
+    }
+
+    #img-mini {
+        width: 350px;
+        height: 450px;
+    }
+
+    .row-7 {
+        width: 250px;
+        margin-left: 20px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .row-8 {
+        margin-top: 34px;
+        width: 41px;
+        height: 41px;
+        background: #C1E6A1;
+        opacity: 0.43;
+        border-radius: 50%;
+        backdrop-filter: blur(50px);
+    }
+
+    #img {
+        padding: 10px;
+        opacity: 10;
+        border-style: none;
+    }
+
+    #img-1 {
+        padding: 10px;
+        padding-left: 15px;
+        opacity: 10;
+        border-style: none;
+    }
+
+    #img-3 {
+        margin-top: -5px;
+        margin-left: -3px;
+        opacity: 10;
+    }
+
+    .row-5-1 {
+        width: 300px;
+        height: 30px;
+        margin-left: -3px;
+        margin-top: 5px;
+    }
+
+    .number {
+        margin-top: -20px;
+        margin-left: 30px;
+    }
+
+    .row-5-2 {
+        width: 300px;
+        height: 130px;
+        display: flex;
+    }
+
+    .phone {
+        width: 25px;
+        height: 25px;
+    }
+
+    .location {
+        width: 25px;
+        height: 50px;
+        margin-top: 30px;
+
+    }
+
+    .loca {
+
+        margin-top: 15px;
+        margin-left: 10px;
+        width: 330px;
+        height: 90px;
+
+    }
+
+    .error {
+        color: red;
+    }
+
+    @media(max-width:600px) {
+        .container-1 {
+            margin-top: -5px;
+        }
+
+        .contact {
+            padding: 0px;
+            background: #c0b5b5;
+            font-size: 15px;
+        }
+
+        .row-1 {
+            margin-top: 15px;
+            border-radius: 15px;
+        }
+
+        #row-1 {
+            max-width: 400px;
+            border-radius: 15px;
+
+        }
+
+        .head {
+            margin-left: 20px;
+        }
+
+        #mail {
+            width: 270px;
+        }
+
+        #img-mini {
+            width: 270px;
+        }
+
+        #textarea {
+            width: 270px;
+        }
+
+        .box {
+            margin-left: 30px;
+        }
+
+        #cvlogo {
+            display: none;
+        }
+
+        #button {
+            margin-left: 75px;
+        }
+
+        .loca {
+            width: 200px;
+        }
+    }
+</style>
 <div class="contact">
 
     <div class="container-1">
