--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -1,70 +1,358 @@
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        /* font-family: 'Poppins', sans-serif; */
+    }
+
+    .login {
+        width: 100%;
+        justify-content: center;
+        padding: 50px;
+        background: #c0b5b5;
+    }
+
+    .container-1 {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin-top: 50px;
+    }
+
+    .title {
+        margin-top: 26px;
+        display: flex;
+        font-weight: 500;
+        font-size: 48px;
+        line-height: 72px;
+        color: #000000;
+    }
+
+    .row-1 {
+        position: relative;
+        flex: 1;
+        max-width: 410px;
+        height: 785px;
+        background: white;
+        border-radius: 26px 0px 0px 26px;
+
+    }
+
+    #yoga {
+        width: 404px;
+        height: 498px;
+        margin-top: 98px;
+    }
+
+    #row-2 {
+        position: relative;
+        flex: 1;
+        max-width: 583px;
+        height: 785px;
+        background: #FFFFFF;
+
+        border-radius: 0px 26px 26px 0px;
+    }
+
+    .cont {
+        margin: 37px;
+        font-style: italic;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 21px;
+        color: #7D7B7B;
+    }
+
+    .inputs {
+        margin: 100px;
+        margin-top: -10px;
+        max-width: 700px;
+        height: 400px;
+    }
+
+    .mail {
+        height: 27px;
+        width: 49px;
+        font-size: 18px;
+        line-height: 27px;
+        font-weight: 400;
+        color: #000000;
+    }
+
+    #mail {
+        height: 50px;
+        width: 380px;
+        margin: 3px;
+        background: #FFFFFF;
+        border: 1px solid #C4C4C4;
+        box-sizing: border-box;
+
+        font-size: 15px;
+
+        border-radius: 5px;
+    }
+
+    #password {
+        margin-top: 35px;
+    }
+
+    .remember {
+
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 24px;
+        color: #2D3748;
+    }
+
+    .forgot {
+        margin-top: 28px;
+    }
+
+    #box {
+        margin-left: 11px;
+        margin-right: 11px;
+        cursor: pointer;
+    }
+
+    #forgot {
+        margin-left: 91px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        cursor: pointer;
+
+        color: #528D23;
+    }
+
+    #button {
+        margin: 40px;
+        margin-left: 90px;
+        width: 216px;
+        height: 50px;
+        cursor: pointer;
+        border-style: none;
+        background: #04C45C;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+    }
+
+    .hr {
+        width: 140px;
+        margin: 10px;
+        height: 0px;
+        border: 0.5px solid #C4C4C4;
+        transform: rotate(180deg);
+    }
+
+    .line {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .buttons {
+        margin-top: -50px;
+    }
+
+    .button-1 {
+        font-size: 15px;
+        margin-left: 40px;
+        width: 220px;
+        height: 50px;
+        cursor: pointer;
+        background: #FFFFFF;
+        border-style: none;
+        box-shadow: 2px 4px 7px -1px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+    }
+
+    .button-2 {
+        font-size: 15px;
+        margin-left: 50px;
+        width: 220px;
+        height: 50px;
+        cursor: pointer;
+        border-style: none;
+        background: #1877F2;
+        box-shadow: 2px 4px 7px -1px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+    }
+
+    #img {
+        margin-right: 20px;
+        width: 23px;
+        height: 23px;
+    }
+
+    .bottom {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .container-3 {
+        margin-top: 63px;
+        width: 250px;
+        height: 24px;
+    }
+
+    .sign-up {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 24px;
+        text-decoration: none;
+        cursor: pointer;
+        color: #F45805;
+    }
+
+    .error {
+        color: red;
+    }
+
+    @media(max-width:600px) {
+
+        /* .login{
+        background-color: #fff;
+    } */
+        .container-1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            width: 180px;
+            margin-top: -30px;
+        }
+
+        #row-1 {
+            display: none;
+        }
+
+        #row-2 {
+            max-width: 350px;
+            border-radius: 10px;
+            left: 23%;
+            height: 850px;
+        }
+
+        .title {
+            margin-left: 120px;
+        }
+
+        .details {
+            margin-left: -70px;
+        }
+
+        #mail {
+            width: 280px;
+            margin-left: -7px;
+        }
+
+        #forgot {
+
+            margin-left: 80px;
+        }
+
+        #button {
+            margin-left: 35px;
+        }
+
+        .line {
+            display: none;
+        }
+
+        .buttons {
+            margin-top: -90px;
+        }
+
+        .button-1 {
+            margin: 30px;
+            margin-left: 60px;
+        }
+
+        .button-2 {
+            margin-left: 60px;
+        }
+
+        .container-3 {
+
+            margin-left: 60px;
+        }
+    }
+</style>
+
 <div class="container-fluid">
     <div class="login">
         <div class="container-1">
-        <div class="row-1" id="row-1">
-            <img id="yoga" src="assets/logo.png" >
-        </div>
-        <div class="row-1" id="row-2">
+            <div class="row-1" id="row-1">
+                <img id="yoga" src="assets/logo.png">
+            </div>
+            <div class="row-1" id="row-2">
 
-            <div class="title">  Login  </div>
+                <div class="title"> Login </div>
 
-            <div class="cont">
+                <div class="cont">
                     Feel delight with fresh plants!!
-            </div>
+                </div>
 
-                                        <!--  Inputs  -->
+                <!--  Inputs  -->
 
-            <div class="inputs">
-                <form class="details" [formGroup]="registerForm" (ngSubmit)="submitData()" >  
-                <div class="input-box">
-                    <div class="mail"> Email </div>
-                    <input formControlName="email" type="text" placeholder="Enter your Email Address" id="mail" class="form-control">
-                    <div *ngIf="email.invalid && (email.touched || email.dirty)">
-                            <span class="error" *ngIf="email.errors?.required">*Email is Required.</span>
-                            <span class="error" *ngIf="email.errors?.email">*Enter valid e-mail id.</span>
+                <div class="inputs">
+                    <form class="details" [formGroup]="registerForm" (ngSubmit)="submitData()">
+                        <div class="input-box">
+                            <div class="mail"> Email </div>
+                            <input formControlName="email" type="text" placeholder="Enter your Email Address" id="mail"
+                                class="form-control">
+                            <div *ngIf="email.invalid && (email.touched || email.dirty)">
+                                <span class="error" *ngIf="email.errors?.required">*Email is Required.</span>
+                                <span class="error" *ngIf="email.errors?.email">*Enter valid e-mail id.</span>
+                            </div>
                         </div>
+
+                        <div class="input-box">
+                            <div class="mail" id="password"> Password </div>
+                            <input formControlName="password" type="password" placeholder="Enter your Password"
+                                class="password" id="mail">
+                            <div *ngIf="password.invalid && (password.touched || password.dirty)">
+                                <span class="error" *ngIf="password.errors?.required">*Password is Required.</span>
+                            </div>
+                        </div>
+
+                        <div class="forgot">
+                            <span class="remember"><input type="checkbox" id="box">Remember me</span>
+                            <a id="forgot"> Forgot password ?</a>
+                        </div>
+
+                        <button id="button" [disabled]="registerForm.invalid">LOGIN</button>
+
+                        <div class="line">
+                            <p class="hr"> </p> <span>or</span>
+                            <p class="hr"> </p>
+                        </div>
+                    </form>
                 </div>
-                
-                <div class="input-box">
-                        <div class="mail" id="password"> Password </div>
-                        <input formControlName="password" type="password" placeholder="Enter your Password" class="password" id="mail">
-                        <div *ngIf="password.invalid && (password.touched || password.dirty)">
-                            <span class="error" *ngIf="password.errors?.required">*Password is Required.</span>
-                        </div> 
-                </div>
 
-                <div class="forgot">
-                        <span class="remember"><input type="checkbox" id="box">Remember me</span>
-                        <a id="forgot"> Forgot password ?</a> 
-                    </div>
+                <div class="buttons">
 
-                    <button id="button" [disabled]="registerForm.invalid" >LOGIN</button>
-                
-                    <div class="line">
-                    <p class="hr"> </p> <span>or</span> <p class="hr"> </p>
-                    </div>
-                </form>
-            </div>
-
-            <div class="buttons">
-
-                    <button class="button-1"><img id="img" src="assets/google.png"><span class="align">Login with Google</span> </button>
+                    <button class="button-1"><img id="img" src="assets/google.png"><span class="align">Login with
+                            Google</span> </button>
 
                     <button class="button-2"><img id="img" src="assets/path14.png"> Login with Facebook</button>
 
-            </div>
+                </div>
 
-            <div class="bottom">
+                <div class="bottom">
 
-                <div class="container-3">
-                    Don't have account? <a class="sign-up" routerLink='signup'> Sign Up </a>
+                    <div class="container-3">
+                        Don't have account? <a class="sign-up" routerLink='signup'> Sign Up </a>
+                    </div>
+
                 </div>
 
             </div>
-            
         </div>
-        </div>  
 
     </div>
 </div>
-
