--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,96 +1,393 @@
+<style>
+  a:hover {
+    text-decoration: none;
+  }
+
+  .home {
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .row-0 {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+
+  }
+
+  .row-00 {
+    width: 1850px;
+    display: flex;
+  }
+
+  .row-0-1 {
+    width: 450px;
+  }
+
+  .row-01 {
+    width: 100%;
+  }
+
+  .row-0 img {
+    width: 450px;
+    height: 700px;
+    margin-top: 50px;
+  }
+
+  .row-01 img {
+    float: right;
+  }
+
+  .row-0-2 {
+    margin: 9rem 0rem 0rem 0rem;
+
+  }
+
+  .cent {
+    margin-bottom: 6rem;
+    color: #3c6e39;
+
+
+  }
+
+  .cent1 {
+    margin-bottom: 7rem;
+
+  }
+
+  .cent2 {
+    font-size: 22px;
+    border-color: #006A71;
+    background-color: #006A71;
+    margin-left: 7rem;
+    box-shadow: none;
+    border-color: none;
+  }
+
+  .cent3 {
+    padding: 15px;
+    margin-top: 5rem;
+    border: 3px groove rgb(30, 122, 12);
+    color: #014483;
+  }
+
+
+  .row-1 {
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+  }
+
+  .row-2 {
+    height: 450px;
+    width: 400px;
+    border-radius: 30px 0px 0px 30px;
+    justify-content: center;
+  }
+
+  #img-1 {
+    height: 450px;
+    width: 400px;
+    border-radius: 30px 0px 0px 30px;
+    align-items: center;
+    padding: 0px;
+    float: left;
+
+  }
+
+  #row-2 {
+    height: 450px;
+    width: 1200px;
+    background-color: rgb(96, 168, 96);
+    border-radius: 0px 30px 30px 0px;
+  }
+
+  .row-2-1 {
+    margin: 30px;
+    font-size: 4rem;
+    height: 60px;
+    width: 450px;
+
+  }
+
+  .row-2-2 {
+    margin: 30px;
+    font-size: 2.5rem;
+    color: rgba(255, 255, 255, 0.616);
+    height: 160px;
+    width: 850px;
+  }
+
+  #row-3 {
+    height: 450px;
+    width: 1200px;
+    background-color: rgb(235, 161, 23);
+    border-radius: 0px 30px 30px 0px;
+  }
+
+  #img-3 {
+    height: 450px;
+    width: 400px;
+    border-radius: 30px 0px 0px 30px;
+
+  }
+
+  .explore {
+    color: black;
+    font-size: 2.5rem;
+  }
+
+  #explore {
+    margin-top: 40px;
+    margin-left: 40px;
+  }
+
+
+  #row-6 {
+    margin-top: 30px;
+  }
+
+  #row-7 {
+    height: 450px;
+    width: 1200px;
+    background-color: rgb(209, 91, 87);
+    border-radius: 0px 30px 30px 0px;
+  }
+
+  #row-6-2 {
+    height: 450px;
+    width: 1200px;
+    background-color: rgb(247, 167, 167);
+    border-radius: 0px 30px 30px 0px;
+  }
+
+  @media(max-width:600px) {
+    #img-1 {
+      width: 330px;
+      border-radius: 15px;
+    }
+
+    .row-1 {
+      flex-wrap: wrap;
+      width: 320px;
+      align-items: center;
+      overflow-x: hidden;
+      border-radius: 15px;
+    }
+
+    .row-2 {
+      width: 300px;
+      height: 400px;
+    }
+
+    #row-2 {
+      width: 350px;
+      height: 600px;
+    }
+
+    #row-6 {
+      flex-wrap: wrap;
+      border-radius: 15px;
+      width: 320px;
+      align-items: center;
+
+      overflow-x: hidden;
+    }
+
+    #row-6-2 {
+      height: 575px;
+      width: 350px;
+    }
+
+    .row-2-1 {
+      font-size: 2.5rem;
+      border-radius: 0px 0px 15px 15px;
+    }
+
+    .row-2-2 {
+      width: 230px;
+      height: 400px;
+      font-size: 2rem;
+    }
+
+    #row-3 {
+
+      width: 350px;
+      height: 600px;
+    }
+
+    #row-7 {
+      width: 350px;
+      height: 550px;
+      border-radius: 0px 15px 0px 15px;
+    }
+
+
+    .row-00 {
+      width: 100%;
+
+      /* background-color: rgb(209, 226, 228); */
+      background-image: url(../../assets/pictures/home11.jpg);
+      background-repeat: no-repeat;
+      font-size: 14px;
+      background-size: 380px 700px;
+      justify-content: center;
+
+
+
+    }
+
+    .row-01 {
+
+      overflow-x: hidden;
+      justify-content: center;
+    }
+
+    .row-0 img {
+      display: none;
+    }
+
+    .row-0-2 {
+      margin: 3rem 0rem 0rem 0rem;
+      margin-left: -20rem;
+
+    }
+
+    .cent {
+      margin-top: 9rem;
+      font-size: 30px;
+      margin-bottom: 4rem;
+      width: 200px;
+      margin-left: 2rem;
+
+    }
+
+    .cent1 {
+      margin-bottom: 5rem;
+      margin-left: 1.8rem;
+      font-size: 28px;
+    }
+
+    .cent2 {
+      font-size: 25px;
+      margin-left: 7rem;
+    }
+
+    .anime {
+      font-size: 32px;
+      margin-top: -3.5rem;
+    }
+
+    .cent3 {
+      border: none;
+      margin-right: 2rem;
+      margin-bottom: 5rem;
+
+    }
+  }
+</style>
 <div class="container-fluid home">
   <div class="row-0">
     <div class="row-00">
-    <div class="row-0-1">
-      <img src="../../assets/pictures/home9.jpg" alt="img">
-    </div>
-    <div class="row-0-2">
-      <h1 class="cent">Are you confused How to grow a plant???</h1>
-      <h2 class="cent1">We're here to teach you!!!</h2>
-      <a routerLink="explore"><button class="btn btn-danger cent2 ">Explore here</button> </a>
-      <div class="anime">
-        <h1 class="cent3 ">Join hands with us to make the world green...</h1>
+      <div class="row-0-1">
+        <img src="../../assets/pictures/home9.jpg" alt="img">
       </div>
-      
+      <div class="row-0-2">
+        <h1 class="cent">Are you confused How to grow a plant???</h1>
+        <h2 class="cent1">We're here to teach you!!!</h2>
+        <a routerLink="explore"><button class="btn btn-danger cent2 ">Explore here</button> </a>
+        <div class="anime">
+          <h1 class="cent3 ">Join hands with us to make the world green...</h1>
+        </div>
+
+      </div>
     </div>
-  </div>
-  <div class="row-01">
-    <img src="../../assets/pictures/home7.jpg" alt="img">
-  </div>
+    <div class="row-01">
+      <img src="../../assets/pictures/home7.jpg" alt="img">
+    </div>
   </div>
 </div>
 
 <div class="container-fluid">
-  <div class="row-1" >
-      <div class="row-2">
-          <img src="../../assets/pictures/decor3.jpg" id="img-1">
+  <div class="row-1">
+    <div class="row-2">
+      <img src="../../assets/pictures/decor3.jpg" id="img-1">
+    </div>
+    <div class="row-2" id="row-2">
+      <div class="row-2-1">
+        Ornamental plants
       </div>
-      <div class="row-2" id="row-2">
-        <div class="row-2-1">
-          Ornamental plants
-        </div>
-        <div class="row-2-2">
-          Ornamental plants are plants that are grown for decorative purposes in gardens and landscape design projects, as houseplants, cut flowers and specimen display. The cultivation of ornamental plants comes under floriculture and tree nurseries, which is a major branch of horticulture
-          <div  id="explore">
-            <a class="explore" routerLink="card" ><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
-          </div>
+      <div class="row-2-2">
+        Ornamental plants are plants that are grown for decorative purposes in gardens and landscape design projects, as
+        houseplants, cut flowers and specimen display. The cultivation of ornamental plants comes under floriculture and
+        tree nurseries, which is a major branch of horticulture
+        <div id="explore">
+          <a class="explore" routerLink="card"><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
         </div>
       </div>
+    </div>
   </div>
 
-  <div class="row-1" id="row-6" >
+  <div class="row-1" id="row-6">
     <div class="row-2">
-        <img src="../../assets/pictures/flower.jpg" id="img-1">
+      <img src="../../assets/pictures/flower.jpg" id="img-1">
     </div>
     <div class="row-2" id="row-6-2">
       <div class="row-2-1">
         Flowering plants
       </div>
       <div class="row-2-2">
-        Flowering plants are a type of vascular plant that produces flowers in order to reproduce. Flowering plants produce seeds within a fruit. The scientific name for flowering plants is angiosperms. Flowering plants follow a specific life cycle.Flowering plants are the most diverse group of land plants     
-        <div id="explore" >
-          <a class="explore" routerLink="flower" ><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
+        Flowering plants are a type of vascular plant that produces flowers in order to reproduce. Flowering plants
+        produce seeds within a fruit. The scientific name for flowering plants is angiosperms. Flowering plants follow a
+        specific life cycle.Flowering plants are the most diverse group of land plants
+        <div id="explore">
+          <a class="explore" routerLink="flower"><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
         </div>
       </div>
     </div>
-</div>
+  </div>
 
-  <div class="row-1" id="row-6"  >
-      <div class="row-2">
+  <div class="row-1" id="row-6">
+    <div class="row-2">
       <img src="../../assets/pictures/fruit.jpg" id="img-1">
-      </div>
+    </div>
     <div class="row-2" id="row-3">
       <div class="row-2-1">
         Fruit trees
       </div>
       <div class="row-2-2">
-        A fruit tree is a tree which bears fruit that is consumed or used by animals and humans — all trees that are flowering plants produce fruit, which are the ripened ovaries of flowers containing one or more seeds. In horticultural usage, the term "fruit tree" is limited to those that provide fruit for human food
-        <div  id="explore">
-          <a class="explore" routerLink="fruit" ><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
+        A fruit tree is a tree which bears fruit that is consumed or used by animals and humans — all trees that are
+        flowering plants produce fruit, which are the ripened ovaries of flowers containing one or more seeds. In
+        horticultural usage, the term "fruit tree" is limited to those that provide fruit for human food
+        <div id="explore">
+          <a class="explore" routerLink="fruit"><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
         </div>
       </div>
     </div>
-    
-</div> 
+
+  </div>
 
 
-<div class="row-1" id="row-6">
-  <div class="row-2">
-    <img src="../../assets/pictures/decor6.jpg" id="img-1">
-</div>
-  <div class="row-2" id="row-7">
-    <div class="row-2-1">
-      Vegetable plants
+  <div class="row-1" id="row-6">
+    <div class="row-2">
+      <img src="../../assets/pictures/decor6.jpg" id="img-1">
     </div>
-    <div class="row-2-2">
-      Vegetables are parts of plants that are consumed by humans or other animals as food. Vegetable plants collectively refer to all edible plant matter, including the flowers, fruits, stems, leaves, roots, and seeds.Most vegetables are grown all over the world as climate permits.
-      <div  id="explore">
-        <a class="explore" routerLink="vegetables" ><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
+    <div class="row-2" id="row-7">
+      <div class="row-2-1">
+        Vegetable plants
+      </div>
+      <div class="row-2-2">
+        Vegetables are parts of plants that are consumed by humans or other animals as food. Vegetable plants
+        collectively refer to all edible plant matter, including the flowers, fruits, stems, leaves, roots, and
+        seeds.Most vegetables are grown all over the world as climate permits.
+        <div id="explore">
+          <a class="explore" routerLink="vegetables"><i class="far fa-arrow-alt-circle-right icon"></i> Explore more</a>
+        </div>
       </div>
     </div>
+
   </div>
-  
-</div>
 
 
 </div>
